--- a/index.html
+++ b/index.html
@@ -50,25 +50,23 @@
             <h2 class="main__bottom-title">Catalog</h2>
             <div class="container">
                 <div class="section">
-                    <div class="border">
+                    <div class="item">
                     <img src="images/kurtka.png" alt="">
+                    <p class="main__item-text">Сlothes</p>
                 </div>
-                <div class="border">
+                <div class="item">
                     <img src="images/krosi.png" alt="">
+                    <p class="main__item-shoes">Shoes</p>
                 </div>
-                    <div class="border">
+                    <div class="item">
                     <img src="images/palatka.png" alt="">
+                    <p class="main__item-text">Tents</p>
                 </div>
-                    <div class="border">
+                    <div class="item">
                     <img src="images/sumka.png" alt="">
+                    <p class="main__item-text">Backpacks</p>
                 </div>
                 </div>
-            </div>
-            <div class="container-text container">
-                <p class="main__item-text">Сlothes</p>
-                <p class="main__item-shoes">Shoes</p>
-                <p class="main__item-text">Tents</p>
-                <p class="main__item-text">Backpacks</p>
             </div>
     </div>
     <div class="container main__end">
